working show page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,9 @@
     <title>Home</title>
 </head>
 <body>
+    <nav>
+        <a href="/new">Add a New Car</a>
+    </nav>
     <h1>Home</h1>
     <ul>
         <%cars.forEach(car=> { %>
