--- a/views/show.ejs
+++ b/views/show.ejs
@@ -18,7 +18,7 @@
     <form action="/<%=car._id %>?_method=DELETE" method="POST">
         <button class="btn btn-danger btn-sm" type="submit">DELETE</button>
     </form>
-    <button class="btn-outline-secondary" type="submit">
+    <button class=" btn btn-outline-secondary" type="submit">
         <a href="/<%=car._id %>/edit">Edit</a>
     </button>
 </body>
