--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Edit <%=car.name %></h1>
+    <form action="/cars/<%=car._id%>?_method=PUT" method="POST">
+        <input type="text" name="name" value="<%=car.name %>"><br />
+        <input type="text" name="make" value="<%=car.make %>"><br />
+        <input type="number" name="year" value="<%=car.year %>"><br />
+        <input type="number" name="kilometers" value="<%=car.kilometers %>"><br />
+        <input type="number" name="price" value="<%=car.price %>"><br />
+        <input type="text" name="image" value="<%=car.image %>"><br />
+        <input type="text" name="link" value="<%=car.link %>"><br />
+        <button class="btn btn-primary" type="submit">Submit Changes</button>
 </body>
 </html>
