--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <nav><a href="/">Back to Home</a></nav>
     <h1>Edit <%=car.name %></h1>
     <form action="/cars/<%=car._id%>?_method=PUT" method="POST">
         <input type="text" name="name" value="<%=car.name %>"><br />
