--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+
+    <%-include("./partials/head.ejs") %>
+
+
 <body>
     <nav><a href="/">Back to Home</a></nav>
     <h1>Edit <%=car.name %></h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
     <form action="/cars/<%=car._id%>?_method=PUT" method="POST">
         <input type="text" name="name" value="<%=car.name %>"><br />
         <input type="text" name="make" value="<%=car.make %>"><br />
@@ -18,5 +18,7 @@
         <input type="text" name="image" value="<%=car.image %>"><br />
         <input type="text" name="link" value="<%=car.link %>"><br />
         <button class="btn btn-primary" type="submit">Submit Changes</button>
+    </form>
 </body>
+
 </html>
