--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
+<%-include("./partials/head.ejs") %>
 <body>
     <nav>
         <a href="/new">Add a New Car</a>
     </nav>
     <h1>Home</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
     <ul>
         <%cars.forEach(car=> { %>
         <li>
@@ -30,6 +27,9 @@
     #primary {
         width: 200px;
         height: auto;
+    }
+    ul {
+        list-style: none;
     }
 </style>
 </html>
