--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <%-include("./partials/head.ejs") %>
+
 <body>
     <a href="/">Back to Home</a>
     <h1><%=car.name %></h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
     <img id="primary" src="<%=car.image %>"><br />
     Make: <%=car.make %><br />
     Year: <%=car.year %><br />
