--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -20,5 +20,5 @@
         <button class="btn btn-primary" type="submit">Submit Changes</button>
     </form>
 </body>
-
+<%- include("./partials/style.ejs")%>
 </html>
