--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,10 @@
         <nav>
             <a href="/new">Add a New Car</a>
         </nav>
-        <div class="container">
-            <h1>Home</h1>
+        <div class="container" id="heading">
+            <h1>Top Class Imports <br />
+                トップクラス
+            </h1>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
@@ -59,6 +61,21 @@
         {
             color: inherit;
         }
+
+        #heading {
+            background-image: url("https://images.unsplash.com/photo-1600793575654-910699b5e4d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8amRtfGVufDB8fDB8fA%3D%3D&w=1000&q=80;");
+            background-repeat: no-repeat;
+            background-position: left;
+            background-size: 50%;
+            color: black;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: white;
+        }
+        body {
+            color: white;
+            background-color: black;
+        }
+        
     </style>
 
 </html>
