--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,4 +18,5 @@
         <button class="btn btn-primary" type="submit">Add Car</button>
     </form>
 </body>
+<%- include("./partials/style.ejs")%>
 </html>
