--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,11 @@
 <%-include("./partials/head.ejs") %>
 
     <body>
-        <nav>
+        <div class="container">
+    <nav class="navbar">
             <a href="/new">Add a New Car</a>
         </nav>
+    </div>
         <div class="container" id="heading">
             <h1>Top Class Imports <br />
                 トップクラス
@@ -15,9 +17,9 @@
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
             crossorigin="anonymous"></script>
 <div class="container">
-    <form>
+    <form action="/">
         <label for="make">Choose a Make</label>
-        <select name="make" id="make">
+        <select class="form-control" name="make" id="make">
             <option value="Nissan">Nissan</option>
             <option value="Toyota">Toyota</option>
             <option value="Mitsubishi">Mitsubishi</option>
@@ -25,6 +27,7 @@
             <option value="Eunos">Eunos</option>
             <option value="Honda">Honda</option>
             <option value="Suzuki">Suzuki</option>
+            <input type="submit">
         </select>
     </form>
 </div>    
@@ -74,6 +77,12 @@
         body {
             color: white;
             background-color: black;
+        }
+
+        a, a:hover, a:focus 
+        {
+            color: inherit;
+            text-decoration: none;
         }
         
     </style>
