--- a/views/make.ejs
+++ b/views/make.ejs
@@ -1,38 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+<%-include("./partials/head.ejs") %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <body>
+        <nav class="navbar">
+            <a href="/new">Add a New Car</a>
+        </nav>
+        <div class="container" id="heading">
+            <h1>Top Class Imports <br />
+                トップクラス
+            </h1>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+            crossorigin="anonymous"></script>
+<div class="container">
+    
+</div>    
+    <br />
+    <div class="container">
+        <div class="row">
+            <%cars.forEach(car=> { %>
+                <div class="col-lg">
+                    <a href="/<%=car._id %>">
+                        <img id="primary" src="<%=car.image %>">
+                    </a>
+                    <br />
+                    <div class="container">
+                        <a href="/<%=car._id %>">
+                            <%=car.name%>
+                        </a>
+                    </div>
+                </div>
+                <% }) %>
+        </div>
+    </div>
+    </body>
+    <style>
+        #primary {
+            width: 300px;
+            height: auto;
+        }
 
-<body>
-    <ul>
-        <%cars.forEach(car=> { %>
-            <li>
-                <a href="/<%=car._id %>">
-                    <img id="primary" src="<%=car.image %>">
-                </a>
-                <br />
-                <a href="/<%=car._id %>">
-                    <%=car.name%>
-                </a>
-            </li>
-            <% }) %>
-    </ul>
-</body>
-<style>
-    #primary {
-        width: 200px;
-        height: auto;
-    }
+        ul {
+            list-style: none;
+        }
 
-    ul {
-        list-style: none;
-    }
-</style>
-</body>
+        a, a:hover, a:focus 
+        {
+            color: inherit;
+        }
+
+        #heading {
+            background-image: url("https://images.unsplash.com/photo-1600793575654-910699b5e4d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8amRtfGVufDB8fDB8fA%3D%3D&w=1000&q=80;");
+            background-repeat: no-repeat;
+            background-position: left;
+            background-size: 50%;
+            color: black;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: white;
+        }
+        body {
+            color: white;
+            background-color: black;
+        }
+
+        a, a:hover, a:focus 
+        {
+            color: inherit;
+            text-decoration: none;
+        }
+        
+    </style>
 
 </html>
