--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,26 +3,31 @@
     <%-include("./partials/head.ejs") %>
 
 <body>
-    <a href="/">Back to Home</a>
-    <h1><%=car.name %></h1>
+    <div class="container">
+        <a href="/">Back to Home</a>
+    </div>
+    <div class="container">
+        <h1><%=car?.name %></h1>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
-    <img id="primary" src="<%=car.image %>"><br />
-    Make: <%=car.make %><br />
-    Year: <%=car.year %><br />
-    Kilometers: <%=car.kilometers %><br />
-    Price: <%=car.price %><br />
-    <button class="btn btn-primary"><a href="<%=car.link %>" target="_blank">Listing Here</button></a><br />
-    <form action="/<%=car._id %>?_method=DELETE" method="POST">
+    <div class="container">
+    <img id="primary" src="<%=car?.image %>"><br />
+    Make: <%=car?.make %><br />
+    Year: <%=car?.year %><br />
+    Kilometers: <%=car?.kilometers %><br />
+    Price: <%=car?.price %><br />
+    <button class="btn btn-primary"><a href="<%=car?.link %>" target="_blank">Listing Here</button></a><br />
+    <form action="/<%=car?._id %>?_method=DELETE" method="POST">
         <button class="btn btn-danger btn-sm" type="submit">DELETE</button>
     </form>
-    <button class=" btn btn-outline-secondary" type="submit">
-        <a href="/<%=car._id %>/edit">Edit</a>
+    <button class=" btn btn-secondary" type="submit">
+        <a href="/<%=car?._id %>/edit">Edit</a>
     </button>
+    </div>
 </body>
 <style>
     #primary {
-       width: 500px;
+       width: 600px;
        height: auto; 
     }
 
@@ -31,6 +36,9 @@
             color: inherit;
             text-decoration: none;
         }
+        button {
+        margin: 5px;
+    }
 </style>
 <%- include("./partials/style.ejs")%>
 </html>
