--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-<style>
-
 ul {
     list-style: none;
 }
@@ -7,6 +5,7 @@ ul {
 a, a:hover, a:focus 
 {
     color: inherit;
+    text-decoration: none;
 }
 
 #heading {
@@ -21,4 +20,23 @@ a, a:hover, a:focus
 body {
     color: white;
     background-color: black;
+}
+#primary {
+    width: 300px;
+    height: auto;
+}
+input.new {
+    margin: 5px;
+    width: 90%;
+}
+.primary {
+    width: 600px;
+    height: auto; 
+ }
+     button {
+     margin: 5px;
+ }
+ input.edit {
+    margin: 5px;
+    width: 90%;
 }
