--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,10 @@
 
     <body>
         <div class="container">
-    <nav class="navbar">
-            <a href="/new">Add a New Car</a>
-        </nav>
-    </div>
+            <nav class="navbar">
+                <a href="/new">Add a New Car</a>
+            </nav>
+        </div>
         <div class="container" id="heading">
             <h1>Top Class Imports <br />
                 トップクラス
@@ -16,75 +16,40 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
             crossorigin="anonymous"></script>
-<div class="container">
-    <form action="/">
-        <label for="make">Choose a Make</label>
-        <select class="form-control" name="make" id="make">
-            <option value="Nissan">Nissan</option>
-            <option value="Toyota">Toyota</option>
-            <option value="Mitsubishi">Mitsubishi</option>
-            <option value="Mazda">Mazda</option>
-            <option value="Eunos">Eunos</option>
-            <option value="Honda">Honda</option>
-            <option value="Suzuki">Suzuki</option>
-            <input type="submit">
-        </select>
-    </form>
-</div>    
-    <br />
-    <div class="container">
-        <div class="row">
-            <%cars.forEach(car=> { %>
-                <div class="col-lg">
-                    <a href="/<%=car._id %>">
-                        <img id="primary" src="<%=car.image %>">
-                    </a>
-                    <br />
-                    <div class="container">
-                        <a href="/<%=car._id %>">
-                            <%=car.name%>
-                        </a>
-                    </div>
-                </div>
-                <% }) %>
+        <div class="container">
+            <form>
+                <label for="make">Choose a Make</label>
+                <select class="form-control" name="make" id="make">
+                    <option value="All">All</option>
+                    <option value="Nissan">Nissan</option>
+                    <option value="Toyota">Toyota</option>
+                    <option value="Mitsubishi">Mitsubishi</option>
+                    <option value="Mazda">Mazda</option>
+                    <option value="Eunos">Eunos</option>
+                    <option value="Honda">Honda</option>
+                    <option value="Suzuki">Suzuki</option>
+                    <input type="submit">
+                </select>
+            </form>
         </div>
-    </div>
+        <br />
+        <div class="container">
+            <div class="row">
+                <%cars.forEach(car=> { %>
+                    <div class="col-lg">
+                        <a href="/<%=car._id %>">
+                            <img id="primary" src="<%=car.image %>">
+                        </a>
+                        <br />
+                        <div class="container">
+                            <a href="/<%=car._id %>">
+                                <%=car.name%>
+                            </a>
+                        </div>
+                    </div>
+                    <% }) %>
+            </div>
+        </div>
     </body>
-    <style>
-        #primary {
-            width: 300px;
-            height: auto;
-        }
-
-        ul {
-            list-style: none;
-        }
-
-        a, a:hover, a:focus 
-        {
-            color: inherit;
-        }
-
-        #heading {
-            background-image: url("https://images.unsplash.com/photo-1600793575654-910699b5e4d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8amRtfGVufDB8fDB8fA%3D%3D&w=1000&q=80;");
-            background-repeat: no-repeat;
-            background-position: left;
-            background-size: 50%;
-            color: black;
-            -webkit-text-stroke-width: 1px;
-            -webkit-text-stroke-color: white;
-        }
-        body {
-            color: white;
-            background-color: black;
-        }
-
-        a, a:hover, a:focus 
-        {
-            color: inherit;
-            text-decoration: none;
-        }
-        
-    </style>
 
 </html>
