remove select bar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
             crossorigin="anonymous"></script>
-        <div class="container">
+        <!-- <div class="container">
             <form>
                 <label for="make">Choose a Make</label>
                 <select class="form-control" name="make" id="make">
@@ -31,7 +31,7 @@
                     <input type="submit">
                 </select>
             </form>
-        </div>
+        </div> -->
         <br />
         <div class="container">
             <div class="row">
