fix routes for edit and create

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,7 +10,7 @@
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
             crossorigin="anonymous"></script>
         <div class="container">
-            <form class="new" action="/cars" method="POST">
+            <form class="new" action="/" method="POST">
                 <input class="new" type="text" name="name" placeholder="Model & Trim ex. Skyline GTR V-Spec II "><br />
                 <input class="new" type="text" name="make" placeholder="Make ex. Nissan"><br />
                 <input class="new" type="number" name="year" placeholder="Year"><br />
