--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -11,7 +11,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 <div class="container">
-    <form action="/cars/<%=car._id%>?_method=PUT" method="POST">
+    <form action="/<%=car._id%>?_method=PUT" method="POST">
                 <div class="form-group">
                     <input class="edit" type="text" name="name" value="<%=car.name %>"><br />
                 </div>
